# psx-emu

./: .gitignore  CMakeLists.txt  STATUS.md
.github/workflows/: ci.yml
src/: main.cpp
src/bus/: Bus.cpp  Bus.hpp
src/cdrom/: CDRom.cpp  CDRom.hpp
src/common/: Types.hpp
src/cpu/: CPU.cpp  CPU.hpp  Instruction.hpp
src/display/: Display.cpp  Display.hpp
src/dma/: DMA.cpp  DMA.hpp
src/gpu/: GPU.cpp  GPU.hpp
src/gte/: GTE.cpp  GTE.hpp
src/irq/: IRQ.cpp  IRQ.hpp
src/mem/: Bios.cpp  Bios.hpp  Ram.cpp  Ram.hpp
src/spu/: SPU.cpp  SPU.hpp
src/timers/: Timers.cpp  Timers.hpp
tests/: fetch_tests.sh  run_tests.sh
